webscaff changelog
==================


v0.1.0 [2020-02-16]
-------------------
+ Basic functionality.